static/css/yii2.live.css
.yii2-live-widget-empty {
    display: block;
    height: 0;
    overflow: hidden;
    visibility: hidden;
}
.yii2-live-widget {
    overflow: hidden;
}
#page-content {
    overflow: visible;
}

.yii2-live-loading-indicator {
    position: static;
    height: 0;
}
.yii2-live-loading-indicator .messages-part {
    position: fixed;
    z-index: 9999999;
    bottom: 10px;
    right: 10px;
    background: #5ccc5a;
    color: #FFF;
    padding: 5px 12px 5px 12px;
    min-height: 34px;
    box-shadow: 1px 1px 2px rgba(0,0,0,0.5);
    transform: translate(0, 150%);
    transition: transform 0.3s ease 0.5s;
    max-width: 90%;
    min-width: 300px;
    width: auto;
}
.yii2-live-loading-indicator .message-area {
    position: relative;
    padding: 0 26px 0 0;
}
.yii2-live-loading-indicator.active .messages-part {
    transform: translate(0, 0);
    transition: transform 0.2s ease 0s;
}
.yii2-live-loading-indicator .loading-text {
    line-height: 24px;
    font-size: 14px;
    font-weight: bold;
}
.yii2-live-loading-indicator .loading-animation {
    font-size: 18px;
    text-align: center;
    line-height: 24px;
    width: 24px;
    height: 24px;
    position: absolute;
    right: 0;
    top: 50%;
    margin-top: -12px;
}
.yii2-live-loading-indicator .progress-message {
    position: relative;
    padding: 0 26px 0 0;
    font-size: 12px;
}
.yii2-live-loading-indicator .progress-message .icon {
    font-size: 16px;
    text-align: center;
    line-height: 24px;
    width: 24px;
    height: 24px;
    position: absolute;
    right: 0;
    top: 50%;
    margin-top: -11px;
    display: none;
}
.yii2-live-loading-indicator .progress-message.finished .icon {
    display: inline-block;
}
.yii2-live-loading-indicator .loading-overlay {
    position: fixed;
    z-index: 99999;
    top: 0;
    left: 0;
    width: 100%;
    height: 0;
    background: rgba(255,255,255,0.7);
    opacity: 0;
    overflow: hidden;
    visibility: hidden;
    transition: opacity 0.2s ease-in-out 0s, height 0.3s ease 0.2s, visibility 0s ease 0.2s;
}
.yii2-live-loading-indicator .loading-overlay .fa {
    position: absolute;
    top: 50%;
    left: 50%;
    width: 50px;
    height: 50px;
    margin-left: -25px;
    margin-top: -25px;
    font-size: 54px;
    color: green;
    text-align: center;
    line-height: 50px;
    animation-duration: 1s;
}
.yii2-live-loading-indicator.active .loading-overlay {
    height: 100%;
    opacity: 1;
    visibility: visible;
    transition: opacity 0.2s ease-in-out 0s, height 0s ease 0s, visibility 0s ease 0s;
}

.yii2live-element-ajax-wrapper {
    position: relative;
    overflow: hidden;
    min-height: 0;
    max-height: none;
    transition: min-height 0.3s ease 0s, max-height 0.3s ease 0s;
}
.yii2live-element-ajax-wrapper > * {
    margin-top: 0 !important;
    margin-bottom: 0 !important;
}
.yii2live-element-ajax-wrapper::before {
    content: '';
    position: absolute;
    z-index: 2;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background: #FFF;
    opacity: 0;
    transition: min-height 0.3s ease 0s, max-height 0.3s ease 0s, opacity 0.8s ease 0s;
}
.navbar-inverse .yii2live-element-ajax-wrapper::before {
    background: #222;
}
.navbar-inverse .yii2live-element-ajax-wrapper::after {
    color: #FFF;
}
.yii2live-element-ajax-wrapper.active::before {
    opacity: 1;
    transition: none;
}
.yii2live-element-ajax-wrapper::after {
    content: "\f021";
    position: absolute;
    z-index: 3;
    top: 50%;
    left: 50%;
    width: 20px;
    height: 20px;
    margin-top: -10px;
    margin-left: -10px;
    text-align: center;
    font: normal normal normal 14px/1 FontAwesome;
    line-height: 20px;
    font-size: 18px;
    color: #000;
    animation: fa-spin 2s infinite linear;
    opacity: 0;
    transition: opacity 0.8s ease 0s;
}
.yii2live-element-ajax-wrapper.active::after {
    opacity: 1;
    transition: none;
}

.yii2-live-notify .progress {
    margin-bottom: 0;
    position: absolute;
    bottom: 0;
    left: 0;
    width: 100%;
    height: 5px;
}

@media (max-width: 500px) {
    .yii2-live-loading-indicator .messages-part {
        min-width: 0;
    }
}
@media print {
    .yii2-live-loading-indicator { display: none; }
}

